--- a/s_py_ttt.html
+++ b/s_py_ttt.html
@@ -21,6 +21,57 @@
 
   <!-- SweetAlert2 -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <!-- Highlight.js -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
+
+  <!-- Highlight.js script -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
+
+  <style>
+    pre code {
+      font-size: 0.9em;
+      border-radius: 5px;
+      padding: 1em;
+      display: block;
+      overflow-x: auto;
+      background: #2d2d2d;
+      color: #ccc;
+    }
+
+    #credits {
+      color: #2d2d2d;
+      font-size: 1.5em;
+      text-align: center;
+      margin-top: 15px;
+      font-style: italic;
+      letter-spacing: 0.5px;
+    }
+
+    .demo-box {
+      position: relative;
+    }
+
+    .code-overlay {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      background-color: rgba(0, 0, 0, 0.8);
+      color: #f0f0f0;
+      padding: 6px 12px;
+      font-size: 1em;
+      font-style: italic;
+      border-radius: 5px;
+      pointer-events: none;
+      z-index: 10;
+      user-select: none;
+    }
+
+    .no-select {
+      user-select: none;
+    }
+  </style>
 </head>
 
 <body>
@@ -39,17 +90,67 @@
     <div class="overlay"></div>
     <div class="overlay-content">
       <h1 data-i18n="title">Portfolio</h1>
-      <p class="subtitulo" data-i18n="subtitle">Script en JS.</p>
+      <p class="subtitulo" data-i18n="subtitle">Script de Python.</p>
     </div>
+
   </header>
 
   <section class="container">
+    <p>Solo se muestra un trozo del código, ya que el mismo es muy extenso.</p>
     <div class="demo-box">
-      <iframe src="Scripts_JS/forte_pass/index.html" scrolling="no" style="height: 700px;"></iframe>
+      <div class="code-overlay" id="credits">By Lalita635</div>
+      <pre class="no-select"><code class="language-python">
+# Definición de constantes...
+# Definición de varias funciones para ejecutar el juego...
+
+def jugar(modo, nivel=None):
+    global tablero
+    tablero = [" "] * 9
+    jugador_actual = "X"
+
+    while True:
+        mostrar_tablero()
+
+        if modo == "1":  # Jugador vs Jugador
+            movimiento = movimiento_jugador(jugador_actual)
+
+        elif modo == "2":  # Jugador vs IA
+            if jugador_actual == "X":
+                movimiento = movimiento_jugador(jugador_actual)
+            else:
+                print("🤖 La IA está pensando..." if idioma == "es" else "🤖 AI is thinking...")
+                if nivel == "1":
+                    movimiento = ia_basica()
+                elif nivel == "2":
+                    movimiento = ia_intermedia()
+                elif nivel == "3":
+                    movimiento = ia_experta()
+
+        tablero[movimiento] = jugador_actual
+
+        if verificar_ganador(jugador_actual):
+            mostrar_tablero()
+            if modo == "2" and jugador_actual == "O":
+                print("🤖 ¡La IA gana!" if idioma == "es" else "🤖 AI wins!")
+            else:
+                print(f"🎉 ¡Jugador {jugador_actual} gana!" if idioma == "es" else f"🎉 Player {jugador_actual} wins!")
+            break
+
+        if verificar_empate():
+            mostrar_tablero()
+            print("🤝 ¡Empate!" if idioma == "es" else "🤝 It's a tie!")
+            break
+
+        jugador_actual = "O" if jugador_actual == "X" else "X"
+
+
+# Definición del menú...
+# Inicialización del script
+  </code></pre>
     </div>
 
     <div class="center-btn">
-      <a class="btn" href="https://github.com/user-attachments/files/22222996/Pass2.zip" download onclick="mostrarPassword(event)">
+      <a class="btn" href="https://github.com/user-attachments/files/22235469/Ta_Te_Ti.zip" download onclick="mostrarPassword(event)">
         <i class="fas fa-file-arrow-down"></i>
         <span data-i18n="btn_download"> Obtener código</span>
       </a>
@@ -133,6 +234,11 @@
       });
     }
 
+    const setCredits = () => {
+      const creditsElement = document.getElementById('credits');
+      creditsElement.textContent = 'By Lalita635';
+    }
+
     // Modo oscuro
     const toggle = document.getElementById("darkToggle");
     const body = document.body;
@@ -155,16 +261,18 @@
 
     // Traducción
     document.addEventListener('DOMContentLoaded', () => {
+      setCredits();
+
       const DICT = {
         es: {
-          title: 'Portfolio - Generador de Contraseña Configurable',
-          subtitle: 'Este script permite al usuario seleccionar las características a incluir en la contraseña a generar. <br>También cuenta con manejo de errores y alertas.',
+          title: 'Portfolio - Piedra, Papel o Tijera',
+          subtitle: 'Este script implementa el clásico juego de Tic Tac Toe (Ta-Te-Ti) en consola, con opción de jugar contra otro jugador o contra una IA en tres niveles de dificultad (básico, intermedio y experto). <br> El programa es bilingüe (Español/Inglés), permite elegir nivel de dificultad y muestra los resultados de cada partida.',
           btn_download: ' Obtener código',
           inicio: ' Inicio'
         },
         en: {
-          title: 'Portfolio - Configurable Password Generator',
-          subtitle: 'This script allows the user to select the characteristics to include in the generated password. <br>It also includes error handling and alerts.',
+          title: 'Portfolio - Rock, Paper, Scissors',
+          subtitle: 'This script implements the classic Tic Tac Toe (Ta-Te-Ti) game on a console, with the option to play against another player or against an AI in three difficulty levels (basic, intermediate, and expert). <br> The program is bilingual (Spanish/English), allows you to choose the difficulty level, and displays the results of each game.',
           btn_download: ' Get code',
           inicio: ' Home'
         }
