--- a/s_js_temporizador.html
+++ b/s_js_temporizador.html
@@ -87,16 +87,20 @@
     cards.forEach(card => observer.observe(card));
 
     document.querySelectorAll('.btn[data-link]').forEach(btn => {
-      btn.addEventListener('click', function (e) {
-        const link = this.getAttribute('data-link');
+  btn.addEventListener('click', function (e) {
+    const link = this.getAttribute('data-link');
 
-        if (link.startsWith('mailto:')) {
-          window.location.href = link;
-        } else {
-          window.open(link, '_blank');
-        }
-      });
-    });
+    if (link.startsWith('mailto:')) {
+      window.location.href = link;
+    } else if (link.startsWith('http')) {
+      // Enlaces externos -> nueva pestaña
+      window.open(link, '_blank');
+    } else {
+      // Subpáginas internas -> misma pestaña
+      window.location.href = link;
+    }
+  });
+});
 
     //Descarga
     function mostrarPassword(event) {
