Actualizando links cd

--- a/cd_iris.html
+++ b/cd_iris.html
@@ -47,6 +47,17 @@
     .project-description ul li {
       margin-bottom: 10px;
     }
+
+    .lang-note {
+      font-size: 0.95em;
+      background-color: #f0f8ff;
+      padding: 10px 15px;
+      border-left: 4px solid #4a90e2;
+      margin-top: 10px;
+      border-radius: 6px;
+      color: #333;
+      font-family: 'Inter', sans-serif;
+    }
   </style>
 </head>
 
@@ -74,6 +85,11 @@
 
     <div class="demo-box">
       <h2>🌸 Análisis Iris Dataset</h2>
+      <p class="lang-note">
+        🌐 Este proyecto está disponible en <strong>Español</strong> e <strong>Inglés</strong> en su version
+        completa.<br />
+        <em>This project is available in its full version in <strong>Spanish</strong> and <strong>English</strong>.</em>
+      </p>
       <p style="font-size: 1.1em; margin-top: 20px;">
         Un análisis visual interactivo del dataset <strong>Iris</strong> con técnicas de <em>exploratory data
           analysis</em> (EDA).
@@ -121,9 +137,9 @@
     </div>
 
     <div class="center-btn">
-      <a class="btn" href="#" download onclick="mostrarPassword(event)">
+      <a class="btn" href="https://github.com/user-attachments/files/22264405/Proy_Iris.zip" download onclick="mostrarPassword(event)">
         <i class="fas fa-file-arrow-down"></i>
-        <span data-i18n="btn_download"> Obtener código</span>
+        <span data-i18n="btn_code"> Ver código</span>
       </a>
 
     </div>
@@ -231,7 +247,7 @@
         es: {
           title: 'Portfolio - Proyecto de Visualización de datos tabulares',
           subtitle: 'Este proyecto aplica técnicas de análisis exploratorio de datos (EDA) al dataset Iris, utilizando bibliotecas como Seaborn, Matplotlib y Plotly. <br>A través de visualizaciones 2D y 3D, se identifican patrones entre especies y se destaca la utilidad del conjunto para problemas de clasificación multiclase.',
-          btn_download: ' Obtener código',
+          btn_code: ' Obtener código',
           inicio: ' Inicio'
         },
         en: {
