--- a/portfolio.html
+++ b/portfolio.html
@@ -259,20 +259,20 @@
           <h3 data-i18n="iris"> Título</h3>
           <p data-i18n="iris_desc"> Desc</p>
           <a class="btn ghost" data-link="cd_iris.html">
-            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_ver_code"> Ver Código</span>
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_ver_proy"> Ver Proyecto</span>
           </a>
-          <a class="btn ghost" href="#" download onclick="mostrarPassword(event)">
-            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22264405/Proy_Iris.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Ver Código</span>
           </a>
         </div>
         <div class="card">
-          <h3 data-i18n="ttt"> Título</h3>
-          <p data-i18n="ttt_desc"> Desc</p>
-          <a class="btn ghost" data-link="s_py_ttt.html">
-            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_ver_code"> Ver Código</span>
+          <h3 data-i18n="sales"> Título</h3>
+          <p data-i18n="sales_desc"> Desc</p>
+          <a class="btn ghost" data-link="cd_sales.html">
+            <i class="fa fa-code" aria-hidden="true"></i> <span data-i18n="btn_ver_proy"> Ver Proyecto</span>
           </a>
-          <a class="btn ghost" href="#" download onclick="mostrarPassword(event)">
-            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Obtener código</span>
+          <a class="btn ghost" href="https://github.com/user-attachments/files/22264439/Proy_Ventas.zip" download onclick="mostrarPassword(event)">
+            <i class="fas fa-file-arrow-down"></i> <span data-i18n="btn_code"> Ver Código</span>
           </a>
         </div>
       </div>
@@ -431,8 +431,11 @@
           ttt_desc: 'Elegí el nivel que preferas para este entretenido juego. Cuidado con el último nivel.',
           iris: 'Proyecto de Visualización de datos tabulares',
           iris_desc: 'Visualización interactiva del clásico dataset Iris con gráficos exploratorios y análisis de correlación multivariada.',
+          sales: 'Proyecto Ventas',
+          sales_desc: 'Un dashboard interactivo que simula y visualiza ingresos, gastos y ganancias mensuales de un negocio ficticio para análisis financiero.',
           ver: 'Ver',
           btn_example: 'Ejemplo',
+          btn_ver_proy: 'Ver Proyecto',
           btn_ver_code: 'Ver Código',
           btn_code: 'Descargar Código',
           h_contact: 'Contacto',
@@ -481,9 +484,12 @@
           ttt_desc: 'Choose your preferred level for this fun game. Watch out for the last level.',
           iris: 'Tabular Data Visualization Project',
           iris_desc: 'Interactive visualization of the classic Iris dataset with exploratory graphics and multivariate correlation analysis.',
+          sales: 'Sales Project',
+          sales_desc: 'An interactive dashboard that simulates and visualizes monthly revenue, expenses, and profits of a fictional business for financial analysis.',
           viz_desc: 'Graphs with matplotlib and seaborn over a real dataset.',
           ver: 'See',
           btn_example: 'Example',
+          btn_ver_proy: 'See Proyect',
           btn_ver_code: 'See Code',
           btn_code: 'Get Code',
           h_contact: 'Contact',
