--- a/donaciones.html
+++ b/donaciones.html
@@ -7,18 +7,34 @@
   <style>
     body { 
       font-family: Arial, sans-serif; 
-      text-align: center; 
       margin: 0; 
       padding: 20px; 
       background: #f9f9f9;
     }
     h2 { color: #333; margin-bottom: 10px; }
+
+    /* Contenedor principal con 2 columnas */
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 40px;
+      margin-top: 30px;
+      flex-wrap: wrap; /* para que en pantallas chicas se apilen */
+    }
+
+    /* Columna izquierda: formulario */
+    .form-box {
+      flex: 1;
+      max-width: 300px;
+    }
     form { margin: 15px 0; }
     input, button { 
       padding: 10px; 
-      margin: 5px; 
+      margin: 5px 0; 
       border-radius: 8px; 
       border: 1px solid #ccc; 
+      width: 100%;
     }
     button { 
       background: #4CAF50; 
@@ -28,38 +44,78 @@
       transition: background 0.2s ease-in-out;
     }
     button:hover { background: #45a049; }
+
+    /* Columna derecha: QR + mensaje + botón copiar */
+    .qr-box {
+      flex: 1;
+      max-width: 300px;
+      text-align: center;
+    }
     #qrcode { margin: 20px auto; }
     #mensaje { 
-      font-size: 18px; 
+      font-size: 24px; 
       color: #4CAF50; 
       font-weight: bold; 
       margin-top: 15px; 
       display: none; 
     }
-    #aliasBox { margin-top: 15px; }
+    #aliasBox { margin-top: 15px; display:none; }
     #copiarBtn { 
       background: #008CBA; 
       margin-top: 8px; 
     }
     #copiarBtn:hover { background: #007bb5; }
+
+    /* Estilo del pop-up */
+    #popup {
+      visibility: hidden;
+      min-width: 220px;
+      background: #4CAF50;
+      color: white;
+      text-align: center;
+      border-radius: 8px;
+      padding: 12px;
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      font-weight: bold;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      opacity: 0;
+      transition: opacity 0.4s ease, bottom 0.4s ease;
+    }
+    #popup.show {
+      visibility: visible;
+      opacity: 1;
+      bottom: 50px;
+    }
   </style>
 </head>
 <body>
-  <!--h2>Donar con QR Interoperable</h2-->
 
-  <form id="donacionForm">
-    <label>Ingresá el monto a donar ($): </label>
-    <input type="number" id="monto" required min="1">
-    <button type="submit">Continuar</button>
-  </form>
+  <div class="container">
+    <!-- Columna izquierda -->
+    <div class="form-box">
+      <form id="donacionForm">
+        <label>Ingresa el monto a donar ($): </label>
+        <input type="number" id="monto" required min="1">
+        <button type="submit">Continuar</button>
+      </form>
+      <div id="aliasBox">
+        <button id="copiarBtn">Copiar Alias</button>
+      </div>
+      <p id="mensaje">Gracias por tu apoyo 💚</p>
+    </div>
 
-  <div id="qrcode"></div>
-  <p id="mensaje">Gracias por tu apoyo 💚</p>
+    <!-- Columna derecha -->
+    <div class="qr-box">
+      <div id="qrcode"></div>
+    </div>
+  </div>
 
-  <!--div id="aliasBox" style="display:none;">
-    <p><b>Alias de transferencia:</b> <span id="aliasTexto"></span></p>
-    <button id="copiarBtn">Copiar Alias</button>
-  </div-->
+  <!-- Pop-up -->
+  <div id="popup">Alias copiado al portapapeles ✅</div>
 
   <script>
     const alias = "Lalita635.Dev";
@@ -107,18 +163,19 @@
         height: 250
       });
 
-      // Mostrar mensaje de agradecimiento
+      // Mostrar mensaje de agradecimiento y botón copiar
       document.getElementById("mensaje").style.display = "block";
-
-      // Mostrar alias y habilitar botón copiar
-      document.getElementById("aliasTexto").innerText = alias;
       document.getElementById("aliasBox").style.display = "block";
     });
 
-    // Función para copiar el alias al portapapeles
+    // Función para copiar alias y mostrar pop-up
     document.getElementById("copiarBtn").addEventListener("click", function() {
       navigator.clipboard.writeText(alias).then(() => {
-        alert("Alias copiado al portapapeles ✅");
+        const popup = document.getElementById("popup");
+        popup.classList.add("show");
+        setTimeout(() => {
+          popup.classList.remove("show");
+        }, 3000);
       });
     });
   </script>
