--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
         <a class="btn ghost" data-link="cv_maria_laura_peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
           <span data-i18n="btn_download"> Descargar CV</span></a>
         <a class="btn ghost" data-link="https://www.linkedin.com/in/maria-laura-peralta/"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a class="btn ghost" data-link="#contacto"><i class="fas fa-envelope"></i> <span data-i18n="btn_contact">
+        <a class="btn ghost" data-link="colabora.html"><i class="fas fa-envelope"></i> <span data-i18n="btn_contact">
             Contacto</a>
       </div>
     </div>
@@ -283,18 +283,6 @@
   <!-- Contacto -->
   <section id="contacto">
     <div class="container" style="max-width:700px">
-      <div class="card visible" style="text-align:center">
-        <h3 data-i18n="h_contact">Contacto</h3>
-        <p data-i18n="contact_pitch">¿Trabajamos juntos? Escribime:</p>
-        <form id="contact-form">
-          <input type="text" name="name" placeholder="" required data-i18n-placeholder="form_name_ph">
-          <input type="email" name="email" placeholder="" required data-i18n-placeholder="form_email_ph">
-          <textarea name="message" rows="4" placeholder="" required data-i18n-placeholder="form_message_ph"></textarea>
-          <button type="submit" class="btn primary" data-i18n="btn_send">
-            <i class="fas fa-paper-plane"></i> Enviar
-          </button>
-        </form>
-      </div>
       <footer>© <span id="year"></span> • María Laura Peralta</footer>
     </div>
   </section>
@@ -321,10 +309,8 @@
     if (link.startsWith('mailto:')) {
       window.location.href = link;
     } else if (link.startsWith('http')) {
-      // Enlaces externos -> nueva pestaña
       window.open(link, '_blank');
     } else {
-      // Subpáginas internas -> misma pestaña
       window.location.href = link;
     }
   });
