--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="btns">
         <a class="btn ghost" data-link="portfolio.html"><i class="fas fa-folder-open"></i> <span>
             Portfolio</span></a>
-        <a class="btn ghost" data-link="cv_maria_laura_peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
+        <a class="btn ghost" data-link="https://github.com/user-attachments/files/22308142/CV-Maria-Laura-Peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
           <span data-i18n="btn_download">Descargar CV</span></a>
         <a class="btn ghost" data-link="https://www.linkedin.com/in/maria-laura-peralta/"><i class="fab fa-linkedin"></i> LinkedIn</a>
         <!--a class="btn ghost" data-link="https://wa.link/dq26ap"><i class="fab fa-whatsapp"></i> WhatsApp</a-->
