--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       <div class="btns">
         <a class="btn ghost" data-link="index.html"><i class="fas fa-home"></i> <span data-i18n="inicio">
             Inicio</span></a>
-        <a class="btn ghost" data-link="cv_maria_laura_peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
+        <a class="btn ghost" data-link="https://github.com/user-attachments/files/22308142/CV-Maria-Laura-Peralta.pdf" download><i class="fas fa-file-arrow-down"></i>
           <span data-i18n="btn_download"> Descargar CV</span></a>
         <a class="btn ghost" data-link="https://www.linkedin.com/in/maria-laura-peralta/"><i class="fab fa-linkedin"></i> LinkedIn</a>
         <a class="btn ghost" data-link="colabora.html"><i class="fas fa-envelope"></i> <span data-i18n="btn_contact">
