--- a/Scripts_JS/climapp/index.html
+++ b/Scripts_JS/climapp/index.html
@@ -11,7 +11,7 @@
 
 <body onload="onLoad()">
     <div id="loader" class="loader">Cargando...</div>
-    <div id="container" class="contaier">
+    <div id="container" class="container">
         <div class="block">
             <div id="location"></div>
             <div id="date"></div>
