--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,6 @@
 </head>
 
 <body>
-
   <!-- Botones de idioma -->
   <div class="lang-switch" aria-label="Language Switcher">
     <button id="lang-es" type="button">ES</button>
@@ -40,7 +39,7 @@
   <section class="header">
     <div class="overlay"></div>
     <div class="overlay-content">
-      <h1>Portafolio</h1>
+      <h1>Portfolio</h1>
       <p class="subtitulo" data-i18n="subtitle">
         Esta sección reúne una selección de proyectos desarrollados durante mi formación y experiencia práctica. Incluye
         scripts funcionales en JavaScript y Python, juegos interactivos, automatizaciones simples y notebooks de
