--- a/Scripts_JS/cronometro_marca/index.html
+++ b/Scripts_JS/cronometro_marca/index.html
@@ -5,17 +5,30 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cronómetro con marcas</title>
+	<title>Lalita635 - Cronómetro con marcas</title>
 	<link rel="stylesheet" href="https://unpkg.com/bulma">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css">
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 	<style>
 		.mdi {
 			font-size: 3rem;
 		}
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
+.section {
+  padding-top: 0.1rem;   /* reducís el espacio extra */
+  padding-bottom: 0.1rem;
+}
+
 		#tiempoTranscurrido {
 			font-size: 4rem;
 		}
+
 		#credits {
 			color: #DDC9B4;
 			font-size: 1.5em;
